--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DISCORD_TOKEN=your_discord_bot_token_here
 # Admin dashboard login password
 ADMIN_PASSWORD=your_admin_password_here
 
+# Session secret for Express session (required)
+SESSION_SECRET=your_random_session_secret_here
+
 # Web server port (default: 3000)
 PORT=3000
 
